[gd_scene load_steps=2 format=3 uid="uid://ctvc8dd2017y5"]

[ext_resource type="Script" path="res://scripts/player_select.gd" id="1_e5kvk"]

[node name="PlayerSelect" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_e5kvk")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
color = Color(0.168627, 0.168627, 0.168627, 1)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="TitleLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "SET GAME"
horizontal_alignment = 1

[node name="SubtitleLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "How many players?"
horizontal_alignment = 1

[node name="ButtonContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Player1Btn" type="Button" parent="CenterContainer/VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
text = "1 Player"

[node name="Player2Btn" type="Button" parent="CenterContainer/VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
text = "2 Players
"

[node name="Player3Btn" type="Button" parent="CenterContainer/VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
text = "3 Players
"

[node name="Player4Btn" type="Button" parent="CenterContainer/VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
text = "4 Players
"
